--- a/karaoke-app/.gitignore
+++ b/karaoke-app/.gitignore
@@ -25,3 +25,19 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# OS生成ファイル
+.DS_Store
+Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+
+# Virtual environment
+venv/
+
+# VSCodeなどIDE設定
+.vscode/
+.idea/
